sm8250-common: Initialize High Touch Polling Rate support
used to handle our node to force enable Xiaomi's High Touch polling rate mode from kernel

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -35,5 +35,7 @@
 
     <!-- Refresh Rate tile -->
     <string name="refresh_rate_tile_title">Refresh Rate</string>
+    <string name="htsr_enable_title">Increase Touch Responsiveness</string>
+    <string name="htsr_enable_summary">Increases touch polling rate to decrease latency</string>
 
 </resources>
